...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="I6J-7B-5Zg" id="eEd-Jf-U0I"/>
                            <outlet property="delegate" destination="I6J-7B-5Zg" id="qhJ-cX-D4c"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="CoreGraphDemo" id="H0I-h3-MOs"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="nsQ-hg-Qhy" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1650" y="1379"/>
        </scene>
        <!--CoreGraph-->
        <scene sceneID="ERo-ec-Faf">
            <objects>
                <navigationController id="QRE-jp-son" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="CoreGraph" id="8GK-RW-fcM"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KXf-FK-cbT">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="I6J-7B-5Zg" kind="relationship" relationship="rootViewController" id="ad9-nF-K0C"/>
...
